# vbart

./: DESCRIPTION  LICENSE  NAMESPACE
R/: get_yhat_mat.R  predict_vbart.R  vbart_sampler.R
man/: get_yhat_mat.Rd  predict_vbart.Rd  vbart-package.Rd  vbart_sampler.Rd
src/rust/: Cargo.toml
src/rust/roxido/src/: lib.rs
src/rust/roxido_faer/: Cargo.toml
src/rust/roxido_faer/src/: lib.rs
src/rust/roxido_macro/src/: lib.rs
src/rust/src/: lib.rs
