[package]
name = "rust"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[lib]
crate-type = ["staticlib"]

# To convert stop!() to panic!(), set RUST_BACKTRACE=1 environment variable.
[profile.release]
debug = 1
lto = "thin"

[dependencies]
roxido = { path="roxido" }
# roxido_faer = { path="roxido_faer" }
rand_distr = "0.4.3"
rand = "0.8.5"
rand_pcg = "0.3.1"
geo = "0.28.0"
compute = "0.2.3"
statrs = "0.16.0"

